partially finsihed JS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="btn">
         <button class="btnInput">Összehasonlítás</button>
     </div>
+ 
     <div class="output">
         <div class="outputCompare">
             <h4 id=outputCompare1></h2>
@@ -51,6 +52,6 @@
 
 
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
