--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <div class="btn">
         <button class="btnInput">Összehasonlítás</button>
     </div>
- 
+    <div class="btn2">
+        <button class="btnInput2 hidden">Lenulláz</button>
+    </div>
     <div class="output">
         <div class="outputCompare">
             <h4 id=outputCompare1></h2>
