--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
 
         <div class="priceName">
-            <h4>Ár (Ft)</h4>
-            <h4>Ár (Ft)</h4>
+                <h4>Ár (Ft)</h4>
+                <h4>Ár (Ft)</h4>
         </div>
 
         <div class="inputPrice">
@@ -34,16 +34,24 @@
             <input type="number" id="firstSize">
             <input type="number" id="secondSize">
         </div>
+        <div class="numberName">
+            <h4>Mennyiség (db)</h4>
+            <h4>Mennyiség (db)</h4>
+        </div>
+        <div class="inputNumber">
+            <input type="number" id="firstNumber">
+            <input type="number" id="secondNumber">
+        </div>
     </div>
     <div class="btn">
-        <button class="btnInput">Összehasonlítás</button>
+        <button class="btnInput btnclick">Összehasonlítás</button>
     </div>
     <div class="btn2">
-        <button class="btnInput2 hidden">Lenulláz</button>
+        <button class="btnInput2 hidden btnclick">Lenulláz</button>
     </div>
     <div class="output">
         <div class="outputCompare">
-            <h4 id=outputCompare1></h2>
+            <h4 id="outputCompare1"></h2>
             <h4 id="outputCompare2"></h2>
         </div>
         <div class="outputWinner">
